turtleart.lessons.turtleart.Main.Flower.scala.error
Source:12: error: not found: value i
for (i <- i to 8)
          ^